--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* Global Styles */
         body {
             font-family: 'Lato', sans-serif;
-            font-size: 10.5pt; /* Requested size */
+            font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
             line-height: 1.5;
@@ -48,15 +48,15 @@
 
         /* Hyperlink Styles */
         a {
-            color: #1a73e8; /* Research blue */
-            text-decoration: none; /* No underlines */
+            color: #1a73e8; /* Research blue for standard links */
+            text-decoration: none; 
             transition: color 0.2s ease-in-out;
         }
 
         /* All hyperlinks turn orange on hover */
         a:hover {
-            color: #ff9d00; /* Strategic orange */
-            text-decoration: none; /* Keep underlines off */
+            color: #ff9d00; 
+            text-decoration: none;
         }
 
         .social-links a {
@@ -87,7 +87,7 @@
             border: 1px solid #f0f0f0;
         }
 
-        /* Project Titles as Hyperlinks */
+        /* Project Titles: Changed to Black to differentiate from Blue links */
         .project-info h3 {
             margin: 0;
             font-size: 1.25em;
@@ -95,7 +95,7 @@
         }
 
         .project-info h3 a {
-            color: #1a73e8;
+            color: #000; /* Distinct from blue hyperlinks */
         }
 
         .project-info p {
@@ -103,7 +103,7 @@
         }
 
         .project-category {
-            color: #d93025; /* Academic red */
+            color: #d93025; 
             font-style: italic;
             font-weight: 700;
         }
@@ -160,9 +160,9 @@
                     My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
                 <div class="social-links">
-                    <a href="mailto:your-email@example.com">Email</a> /
-                    <a href="https://linkedin.com/in/your-profile">LinkedIn</a> /
-                    <a href="https://github.com/Kenneth-Thakur">GitHub</a>
+                    <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> /
+                    <a href="https://www.linkedin.com/in/kenneth-thakur/" target="_blank">LinkedIn</a> /
+                    <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
             <img src="profile.jpg" alt="Kenneth Thakur" style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover;">
@@ -201,7 +201,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated auditing tool designed to detect financial fraud and waste. The system applies Benford's Law and machine learning outlier detection to large transaction datasets to flag suspicious payments for digital forensic investigation.
+                        An automated auditing engine designed to detect financial fraud and waste in public records. The system applies Benford's Law and machine learning outlier detection to large transaction datasets to flag suspicious payments for digital forensic investigation.
                     </p>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        Automated security scanner for identifying critical vulnerabilities within industrial network perimeters. The tool interfaces with the Shodan API and NIST databases to prioritize risk remediation for servers and connected IoT infrastructure.
+                        An automated vulnerability assessment tool for identifying security flaws within industrial network perimeters. The engine interfaces with the Shodan API and NIST databases to prioritize risk remediation for mission-critical servers and connected IoT infrastructure.
                     </p>
                 </div>
             </div>
